--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ winit-22 = ["skulpin-renderer-winit/winit-22", "skulpin-app-winit/winit-22"]
 winit-23 = ["skulpin-renderer-winit/winit-23", "skulpin-app-winit/winit-23"]
 winit-latest = ["skulpin-renderer-winit/winit-latest", "skulpin-app-winit/winit-latest"]
 
-default = ["skulpin_winit", "skulpin_sdl2", "skia_complete", "winit-22"]
+default = ["skulpin_winit", "skia_complete", "winit-latest"]
 
 [dependencies]
 skulpin-renderer = { version = "0.5", path = "skulpin-renderer" }
@@ -72,9 +72,9 @@ nphysics2d = "0.12"
 
 # The skulpin-renderer-sdl2 crate doesn't specify any features, but downstream libraries can do so by including sdl2
 # for themselves. Examples will use the features added here
-sdl2 = { version = ">=0.33", features = ["bundled", "static-link"] }
+# sdl2 = { version = ">=0.33", features = ["bundled", "static-link"] }
 
-# Used for the imgui example only
-imgui = "0.5"
-imgui-winit-support = "0.5"
-skulpin-plugin-imgui = { version = "0.7", path = "skulpin-plugin-imgui"}
+# Used for the imgui example"skulpin_sdl2",  only
+# imgui = "0.5"
+# imgui-winit-support = "0.5"
+# skulpin-plugin-imgui = { version = "0.7", path = "skulpin-plugin-imgui"}
