--- a/skulpin-renderer/Cargo.toml
+++ b/skulpin-renderer/Cargo.toml
@@ -24,7 +24,7 @@ complete = ["skia-safe/textlayout"]
 [dependencies]
 ash = ">=0.30"
 
-skia-safe = { version = ">=0.30.1", features = ["vulkan"] }
-skia-bindings = { version = ">=0.30.1" }
+skia-safe = { git = "https://github.com/Vurich/rust-skia.git", version = ">=0.36", features = ["vulkan"], default-features = false }
+skia-bindings = { git = "https://github.com/Vurich/rust-skia.git", version = ">=0.36" }
 
 log="0.4"
